fix: avoiding zoom on safari setting input to have at least 1rem

--- a/src/components/movie-search-bar/movie-search-bar.module.css
+++ b/src/components/movie-search-bar/movie-search-bar.module.css
@@ -24,7 +24,7 @@
   align-items: center;
   height: 100%;
   padding: 0.75rem 1rem;
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-sm);
   font-family: inherit;
   border-radius: 0.5rem;
   color: var(--color-neutral-soft);
@@ -34,6 +34,10 @@
   text-overflow: ellipsis;
   max-width: 100%;
   z-index: 2;
+
+  @media (min-width: 768px) {
+    font-size: var(--font-size-xs);
+  }
 }
 
 .userInput {
@@ -51,13 +55,17 @@
   width: 100%;
   height: 100%;
   padding: 0.75rem 1rem;
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-sm);
   font-family: inherit;
   border-radius: 0.5rem;
   border: 1px solid var(--color-neutral);
   z-index: 1;
   background-color: transparent;
   color: var(--color-text);
+
+  @media (min-width: 768px) {
+    font-size: var(--font-size-xs);
+  }
 }
 
 .help {
